syntax = "proto3";

package grpc;

option go_package = "./grpcPb";

service IdentityService {
  rpc GetResIdentity(IdentityResReq) returns (IdentityResResp) {}
  rpc GetUserIdentity(IdentityReq) returns (IdentityResp) {}
}

message IdentityResReq {
  int32 UserID = 1;
}

message IdentityResResp {
  int32 UserID = 1;
  string Role = 2;
  int32 RestaurantID = 3;
}

message IdentityReq {
  int32 UserID = 1;
}

message IdentityResp {
  int32 UserID = 1;
}
